--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Fablab | UCACUE</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Un Laboratorio de Fabricación Digital o FabLab es un taller que proporciona a sus usuarios el asesoramiento, capacitación, maquinaria y herramientas para la fabricación de (casi) cualquier cosa."
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="icon" type="image/svg+xml" href="/img/logo.jpg" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>FABAPP</title>
-</head>
-
-<body>
-  <div id="root" class="main"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <body>
+    <div id="root" class="main"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
